welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:7: error: not found: value color
    var c: Color = color.RED
                   ^PatternPicture:9: error: not found: value color
      case 1 => c =color.RED
                   ^PatternPicture:10: error: not found: value color
      case 2 => c = color.BLUE
                    ^PatternPicture:11: error: not found: value color
      case 3 => c = color.GREEN
                    ^PatternPicture:12: error: not found: value color
      case 4 => c = color.YELLOW
                    ^